# plotters-iced

./: Cargo.toml
examples/split-chart/: Cargo.toml
src/: widget.rs
src/backend/: mod.rs
