[package]
name = "plotters-iced"
version = "0.9.0"
description = "Iced backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2021"
resolver = "2"
homepage = "https://github.com/Joylei/plotters-iced"
repository = "https://github.com/Joylei/plotters-iced.git"
documentation = "https://docs.rs/crate/plotters-iced/"
keywords = ["plotters", "chart", "plot", "iced", "backend"]
categories = ["visualization"]
authors = ["Joylei <leingliu@gmail.com>"]

[workspace]
members = [".", "examples/split-chart"]

[dependencies]
plotters = { version = "0.3", default_features = false }
plotters-backend = "0.3"
iced_widget = { git = "https://github.com/Davidster/iced.git", branch = "master", features = [
    "canvas",
] }
iced_graphics = { git = "https://github.com/Davidster/iced.git", branch = "master" }
iced_core = { git = "https://github.com/Davidster/iced.git", branch = "master" }
once_cell = "1"

[dev-dependencies]
plotters = { version = "0.3", default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
iced = { git = "https://github.com/Davidster/iced.git", branch = "master", features = [
    "canvas",
    "tokio",
] }

chrono = { version = "0.4", default-features = false }
rand = "0.8"
tokio = { version = "1", features = ["rt"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sysinfo = { version = "0.29", default_features = false }
